# Weather-MCP-Server

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/auth/: models.py  rbac.py  router.py  schemas.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 7d54eb570437_create_all_tables.py  ce9950cd2d1b_create_users_table.py
app/mcp_server/: server.py
app/observability/: health.py  logging.py
tests/: conftest.py  dummy_test.py
tests/integration/: test_auth_integration.py
tests/unit/: test_schemas_unit.py  test_security_unit.py
