[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.4",
    "greenlet>=3.5.3",
    "mypy>=2.2.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]
